--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,249 +1,110 @@
-
 {
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "40cda04d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "good morning\n"
-     ]
-    }
-   ],
-   "source": [
-    " print(\"good morning\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1aa379d0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SMARANA, SBI colony, Chevayur PO,Kozhikode\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"SMARANA, SBI colony, Chevayur PO,Kozhikode\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ee720c1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SMARANA, \n",
-      " SBI colony, Chevayur PO\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"SMARANA, \\n SBI colony, Chevayur PO\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8c333750",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SMARANA, \n",
-      "SBI Colony,\n",
-      "Chevayur PO,\n",
-      "kozhikode\n"
-     ]
-    }
-   ],
-   "source": [
-    "print (\"SMARANA, \\nSBI Colony,\\nChevayur PO,\\nkozhikode\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "f60202fb",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(5//2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
-   "id": "8d27a283",
+   "id": "9465429a-c177-492d-a0c1-2c2c777d6406",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'sqrt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmath\u001b[39;00m\n\u001b[1;32m      2\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m\n\u001b[0;32m----> 3\u001b[0m result \u001b[38;5;241m=\u001b[39m sqrt(number)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'sqrt' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "number = 4\n",
+    "result = sqrt(number)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7cf2a34b-1ee3-4add-a074-e7af16a0b79d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mca student's\n"
+      "2.0\n"
      ]
     }
    ],
    "source": [
-    "print(\"mca student's\")"
+    "import math\n",
+    "number = 4 \n",
+    "result = math.sqrt(number)\n",
+    "print (result)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a80d0216",
+   "execution_count": 14,
+   "id": "5c9f7d70-0845-4ec5-aaa4-3d2d39f47858",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mca \"students\"\n"
+      "4\n",
+      "3\n"
      ]
     }
    ],
    "source": [
-    "print( 'mca \"students\"')"
+    "import math\n",
+    "num = 3.7\n",
+    "print(math.ceil(num))\n",
+    "print(math.floor(num))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "d8493a28",
+   "execution_count": 20,
+   "id": "0be6fd5c-68b0-44a1-b7b7-3626372f4ddd",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter side of the square=  5\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "area of the square=  25.0\n"
      ]
     }
    ],
    "source": [
-    "print(2**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "63b707e6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(2**2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "21fe603e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "2**2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "e440b9a7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "arjun\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=\"arjun\"\n",
-    "print(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "0faaeb08",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name = rj\n"
-     ]
-    }
-   ],
-   "source": [
-    "n=\"arjun\"\n",
-    "print(\"name =\",n[1:3])"
+    "#program to compute the area of a square\n",
+    "side = float(input(\"enter side of the square= \"))\n",
+    "area = side * side\n",
+    "print(\"area of the square= \", area)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35db0851",
+   "id": "f290ed61-74c3-4800-8f46-b376813da3a7",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d53a31d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#program to compute the area of a right angled triangle\n"
+   ]
   }
  ],
  "metadata": {
