--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -98,13 +98,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f290ed61-74c3-4800-8f46-b376813da3a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter the base of the triangle=  5\n",
+      "enter the height of the triangle=  10\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area of the right angled triangle is:  25.0\n"
+     ]
+    }
+   ],
    "source": [
-    "#program to compute the area of a right angled triangle\n"
+    "#program to compute the area of a right angled triangle\n",
+    "base = float(input(\"enter the base of the triangle= \"))\n",
+    "height = float(input(\"enter the height of the triangle= \"))\n",
+    "area = 0.5* base * height\n",
+    "print(\"area of the right angled triangle is: \", area)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b94048d5-0296-45bb-b101-e95cb9e7971c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter your name:  karuna\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello,  karuna !\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to display greeting message\n",
+    "name = input(\"enter your name: \")\n",
+    "print(\"hello, \", name,\"!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9037e84a-8295-4fa0-8fdc-7b538194bb93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a number:  2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "previous num:  1\n",
+      "next num:  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to read an integer number and print its previous and next number\n",
+    "num = int(input(\"enter a number: \"))\n",
+    "prenum = (num-1)\n",
+    "nextnum =( num+1)\n",
+    "print(\"previous num: \", prenum)\n",
+    "print(\"next num: \", nextnum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "572b0739-96c0-4e78-8553-21946196db89",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a principle value:  1000\n",
+      "enter a rate:  2\n",
+      "enter a time:  1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "simple interest=  20.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to find simple interest\n",
+    "principle=float(input(\"enter a principle value: \"))\n",
+    "rate=float(input(\"enter a rate: \"))\n",
+    "time=float(input(\"enter a time: \"))\n",
+    "sim=(principle*rate*time)/100\n",
+    "print(\"simple interest= \",sim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cb9314b-cd8c-4e89-92a1-7609d06ea1a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
