--- a/record2.ipynb
+++ b/record2.ipynb
@@ -1,10 +1,9 @@
-
 {
  "cells": [
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "842902d2-f92c-44a4-98cc-7f189bad0012",
+   "id": "b184542a-d68b-4295-91c5-213f1cf5b16d",
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +17,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "temp in fahreheit is:  89.6\n"
+      "32.0 celsius in fahrenheit is:  89.6\n"
      ]
     }
    ],
@@ -26,13 +25,13 @@
     "#program to convert celsius to fahrenheit\n",
     "temp=float(input(\"enter temp in celsius: \"))\n",
     "c=temp*9/5+32\n",
-    "print(\"temp in fahreheit is: \", c)"
+    "print(temp,\"celsius in fahrenheit is: \", c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e75f4f11-43fd-4193-98b7-6ca5314ccdc1",
+   "execution_count": 3,
+   "id": "68edb0d6-98ea-4a03-aa88-c6166bb80e02",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bf7aea8-2f1a-4af1-8662-78846f4fc8b9",
+   "id": "4b444221-885d-4bb3-8483-e08f43ee63b5",
    "metadata": {},
    "outputs": [],
    "source": []
