--- a/record2.ipynb
+++ b/record2.ipynb
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "68edb0d6-98ea-4a03-aa88-c6166bb80e02",
+   "id": "4b444221-885d-4bb3-8483-e08f43ee63b5",
    "metadata": {},
    "outputs": [
     {
@@ -50,16 +50,16 @@
     }
    ],
    "source": [
-    "#program to convert kilo t miles\n",
-    "kilo=float(input(\"enter a value in km: \"))\n",
-    "c=kilo*0.62137\n",
+    "#program to convert kilometer to miles\n",
+    "km=float(input(\"enter a value in km: \"))\n",
+    "c=km*0.62137\n",
     "print(\"value in miles: \",round(c,3))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b444221-885d-4bb3-8483-e08f43ee63b5",
+   "id": "f70e94ec-0e85-42fb-aaa0-38a887587f14",
    "metadata": {},
    "outputs": [],
    "source": []
