--- a/record5.ipynb
+++ b/record5.ipynb
@@ -1,4 +1,3 @@
-
 {
  "cells": [
   {
@@ -33,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "cfbb75ae-cf35-4a06-a0e9-0489fee078f8",
    "metadata": {},
    "outputs": [
@@ -48,7 +47,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "py\n"
+      "extension: py\n"
      ]
     }
    ],
@@ -56,18 +55,47 @@
     "#program to accept a filename from the user,print extension of that\n",
     "name=input(\"enter a filename:\")\n",
     "new=name.split('.')\n",
-    "print(new[-1])"
+    "print(\"extension:\",new[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "421c4b74-a00f-48cf-9d2f-5589e0ca83a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "enter a sequence of numbers: 3,1,2,3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list is: [3, 1, 2, 3]\n",
+      "sum of numbers: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#program to accept a sequence of numbers with comma and create a list and find sum\n",
+    "num=input(\"enter a sequence of numbers:\")\n",
+    "newno=list(map(int,num.split(',')))\n",
+    "print(\"list is:\",newno)\n",
+    "print(\"sum of numbers:\",sum(newno))\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "421c4b74-a00f-48cf-9d2f-5589e0ca83a2",
+   "id": "c3dc6f29-dbb7-414b-be1c-eb79fd873abb",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#program to "
-   ]
+   "source": []
   }
  ],
  "metadata": {
